# user-app/src/main/java/org/github/scalabletaskmanager/user/controller/AuthController.java
@@ -1,6 +1,8 @@
 package org.github.scalabletaskmanager.user.controller;
 
-import org.github.scalabletaskmanager.user.gen.api.UpdateAPI;
+import org.github.scalabletaskmanager.user.gen.api.AuthAPI;
+import org.github.scalabletaskmanager.user.gen.model.LoginUserDTO;
+import org.github.scalabletaskmanager.user.gen.model.RegisterUserDTO;
 import org.github.scalabletaskmanager.user.gen.model.UpdateUserDTO;
 import org.github.scalabletaskmanager.user.service.UserService;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -10,13 +12,25 @@ import org.springframework.web.context.request.RequestContextHolder;
 import org.springframework.web.context.request.ServletRequestAttributes;
 
 @RestController
-public class UpdateController implements UpdateAPI {
+public class AuthController implements AuthAPI {
 
     private final UserService userService;
 
     @Autowired
-    public UpdateController(UserService userService) {
+    public AuthController(UserService userService) {
         this.userService = userService;
+    }
+
+    @Override
+    public ResponseEntity<String> loginUser(LoginUserDTO userDTO) {
+        String jwt = userService.login(userDTO);
+        return ResponseEntity.ok(jwt);
+    }
+
+    @Override
+    public ResponseEntity<String> registerUser(RegisterUserDTO registerUserDTO) {
+        String jwt = userService.register(registerUserDTO);
+        return ResponseEntity.ok(jwt);
     }
 
     @Override
